Revert "Add web server with non-functional GUI"
This reverts commit 9b1f2aa696f30f892c31ac62dcc3b264de6d6cbc.

--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "install-gui": "cd gui && npm install && cd ..",
-    "start-gui": "cd gui && npm start",
-    "start": "cd gui && npm run build && cd .. && sudo \"$(which node)\" server.js",
+    "start": "sudo \"$(which node)\" server.js",
     "executor": "sudo \"$(which node)\" executor.js",
     "test": "sudo \"$(which node)\" ./runAllTests.js"
   },
@@ -21,9 +19,7 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
-    "express": "^4.19.2",
-    "open": "^10.1.0",
-    "serve-static": "^1.16.2"
+    "express": "^4.19.2"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
